# lantern

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  USAGE.md
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/advanced/: README.md
examples/basic/: README.md  dhcp-with-custom-dns.network  static-home.network
examples/ipv6/: README.md  dual-stack.network
examples/wifi/: README.md  home-wpa2.conf  wlan-dhcp.network
examples/wireguard/: README.md  client-full-tunnel.netdev  client-full-tunnel.network
src/: app.rs  config.rs  icons.rs  iwd.rs  main.rs  network.rs  systemd.rs  ui.rs  utils.rs
tests/: integration_tests.rs
